modules/network/vpc-endpoint-sg.tf
# resource "aws_security_group" "vpc_endpoint" {
#   name        = "VPC-endpoint-SG"
#   description = "Security group for VPC Endpoint"
#   vpc_id      = aws_vpc.vpc.id

#   ingress {
#     from_port       = 443
#     to_port         = 443
#     protocol        = "tcp"
#     cidr_blocks     = ["0.0.0.0/0"]
#   }

#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   tags = {
#     Name = "VPC-Endpoint-Security-Group"
#   }
# }
